# DDPL-2023-Final

./: README.md
arith/lib/: core.ml
ddpl-final/: README.md  gibbon.cabal
ddpl-final/app/: Frontend.hs
ddpl-final/src/Gibbon/MyLocTypeLang/: Helper.hs  Interp.hs  Syntax.hs  Typecheck.hs
ddpl-final/tests/: Main.hs
ddpl-final/tests/LocTypeCheck/: Interp.hs  Typecheck.hs
